/* hostfrequencyscaling.proto: describes the hostfrequencyscaling object
 *
 * Authors: Ghazanfar Ali <ghazanfar.ali@ttu.edu>,Kevin Pelzel <kevinpelzel22@gmail.com>; J. Lowell Wofford <lowell@lanl.gov>
 *
 * This software is open source software available under the BSD-3 license.
 * Copyright (c) 2019, Triad National Security, LLC
 * See LICENSE file for details.
 */

 syntax = "proto3";
 package proto;
 
 message HostFreqScalingConfig {
     map<string, HostFreqScalingPolicy> freq_scal_policies = 1;
     string freq_sensor_url = 2;
     string scaling_freq_policy = 3;
     string low_to_high_scaler = 4;
     string high_to_low_scaler = 5;
     int32 low_freq_scaler_dur = 6;
     bool enforce_low_freq_scaler = 7;    

}
 
 message HostFreqScalingPolicy {
    string scaling_governor = 1;
    string scaling_min_freq = 2;
    string scaling_max_freq = 3;
    string node_arch = 4;
    string node_platform = 5;
}